added search input to the first app

--- a/src/first-app/components/post/post.css
+++ b/src/first-app/components/post/post.css
@@ -2,7 +2,6 @@
   width: 100%;
   display: flex;
   justify-content: center;
-  
 }
 
 .form__content_item {
@@ -19,7 +18,8 @@
 .post__item {
   display: flex;
   justify-content: space-between;
-  width: calc((100% / 3) - 60px);
+  width: calc((100% / 3) - 30px);
+  min-width: 250px;
   padding: 20px;
   margin: 15px;
   box-shadow: 0 10px 20px 0 rgba(0, 0, 0, 0.3);
